--- a/cooperations.tex
+++ b/cooperations.tex
@@ -46,7 +46,7 @@ In this Lecture, our goal is to codify the study of unstable cooperations, begin
 \CatOf{Spaces} \arrow[shift left=0.4em]{r}{\Susp^\infty} & \CatOf{Spectra} \arrow[equal]{r}\arrow[shift left=0.4em]{l}{\Loops^\infty} & \CatOf{Modules}_{\S} \arrow[shift left=0.4em]{r}{- \sm E} & \CatOf{Modules}_E \arrow[shift left=0.4em, "\mathrm{forget}"]{l} .
 \end{tikzcd}
 \end{center}
-We will write \(E(-)\) for the induced monad on \(\CatOf{Spaces}\), given by the formula \[E(X) = \Loops^\infty (E \sm \Susp^\infty X) = \colim_{j \to \infty} \Loops^j (\OS{E}{j} \sm X),\] where \(\OS{E}{*}\) are the constituent spaces in the \(\Omega\)--spectrum of \(E\).  This space has the property \(\pi_* E(X) = \widetilde E_{* \ge 0} X\).  The monadic structure comes from the two evident natural transformations:
+We will write \(E(-)\) for the induced monad on \(\CatOf{Spaces}\), given by the formula \[E(X) = \Loops^\infty (E \sm \Susp^\infty X) = \colim_{q \to \infty} \Loops^j (\OS{E}{q} \sm X),\] where \(\OS{E}{*}\) are the constituent spaces in the \(\Omega\)--spectrum of \(E\).  This space has the property \(\pi_* E(X) = \widetilde E_{* \ge 0} X\).  The monadic structure comes from the two evident natural transformations:
 \[\eta\co X \to \Loops^\infty \Susp^\infty X \simeq \Loops^\infty (\S \sm \Susp^\infty X) \to \Loops^\infty (E \sm \Susp^\infty X) = E(X),\] \vspace{-1.6\baselineskip}
 \begin{align*}
 \mu\co E(E(X)) & = \Loops^\infty(E \sm \Susp^\infty\Loops^\infty(E \sm \Susp^\infty X)) \\
@@ -109,31 +109,31 @@ For \(X\) satisfying this freeness condition, there is a splitting \[E(X) \simeq
 
 At this point, it is instructive to work through an extended example to understand the kinds of objects under consideration.  At first appraisal, they appear so bottomlessly complicated that it must be hopeless to actually compute even the enriched Hopf ring associated to a spectrum \(E\).  In fact, the abundance of structure maps involved gives enough footholds that this is actually often feasible, provided we have sufficiently strong stomachs.  Our example will be the aperiodic spectrum \(E = \HFtwo\) (and so we switch back into the graded setting), and the place to start is with a very old result:
 \begin{lemma}
-If \(E\) is a spectrum with \(\pi_{-1} E = 0\), then \(\OS{E}{1} \simeq B\OS{E}{0}\).  If \(E\) is a connective spectrum then \(\OS{E}{n} = B^n \OS{E}{0}\) for \(n \ge 0\). \qed
+If \(E\) is a spectrum with \(\pi_{-1} E = 0\), then \(\OS{E}{1} \simeq B\OS{E}{0}\).  If \(E\) is a connective spectrum then \(\OS{E}{q} = B^q \OS{E}{0}\) for \(n \ge 0\). \qed
 \end{lemma}
 \noindent We use the natural skeletal filtration on \(B(-)\) to form a spectral sequence.
 \begin{lemma}[{\cite[Proposition 3.2]{Segal}, \cite[Theorem 2.1]{RavenelWilsonKthyOfEMSpaces}}]
 For \(G\) a loopspace, there is a \index{bar spectral sequence}spectral sequence of signature \[E^1_{*, j} = F_*(\Susp G)^{\sm j} \Rightarrow F_* BG.\]  If \(G\) is a double loopspace, then the spectral sequence is one of algebras.  If \(F\) has K\"unneth isomorphisms \[\widetilde F_*((\Susp G)^{\sm j}) \cong \widetilde F_*(\Susp G)^{\otimes_{F_*} j},\] then the \(E^2\)--page is given by \[E^2_{*, *} \cong \Tor^{F_* G}_{*, *}(F_*, F_*).\]  If both extra conditions hold, then the spectral sequence is of Hopf algebras. \qed
 \end{lemma}
 \begin{corollary}
-If \(E\) is a connective spectrum and if for all \(j\) the ring spectrum \(F\) has K\"unneth isomorphisms \(\widetilde F_*(\OS{E}{j} \sm \OS{E}{j}) \cong \widetilde F_* \OS{E}{j} \otimes_{F_*} \widetilde F_* \OS{E}{j}\), then there is a family of spectral sequences of Hopf algebras with signatures
+If \(E\) is a connective spectrum and if for all \(q\) the ring spectrum \(F\) has K\"unneth isomorphisms \(\widetilde F_*(\OS{E}{q} \sm \OS{E}{q}) \cong \widetilde F_* \OS{E}{q} \otimes_{F_*} \widetilde F_* \OS{E}{q}\), then there is a family of spectral sequences of Hopf algebras with signatures
 \[
 \pushQED{\qed}
-E^2_{*, *} \cong \Tor^{F_* \OS{E}{j}}_{*, *}(F_*, F_*) \Rightarrow F_* \OS{E}{j+1}. \qedhere
+E^2_{*, *} \cong \Tor^{F_* \OS{E}{q}}_{*, *}(F_*, F_*) \Rightarrow F_* \OS{E}{q+1}. \qedhere
 \popQED
 \]
 \end{corollary}
 
 That this spectral sequence is multiplicative for the \(\ast\)--product is useful enough, but the situation is actually much, much better than this:
 \begin{lemma}[{\cite[Equation 1.3]{ThomasonWilson}, \cite[Theorem 2.2]{RavenelWilsonKthyOfEMSpaces}}]\label{CircProductAndDifferentials}
-Suppose further that \(E\) is a ring spectrum, and denote by \(E^r_{*, *}(F_* \OS{E}{j})\) the spectral sequence considered above whose \(E^2\)--term is given by \(\Tor\) over \(F_* \OS{E}{j}\).  There are maps \[E^r_{*, *}(F_* \OS{E}{j}) \otimes_{F_*} F_* \OS{E}{m} \to E^r_{*, *}(F_* \OS{E}{j+m})\] which converge to the map \[F_* \OS{E}{j+1} \otimes_{F_*} F_* \OS{E}{m} \xrightarrow{\circ} F_* \OS{E}{j+m+1}\] on the \(E^\infty\)--page and which satisfy
+Suppose further that \(E\) is a ring spectrum, and denote by \(E^r_{*, *}(F_* \OS{E}{q})\) the spectral sequence considered above whose \(E^2\)--term is given by \(\Tor\) over \(F_* \OS{E}{q}\).  There are maps \[E^r_{*, *}(F_* \OS{E}{j}) \otimes_{F_*} F_* \OS{E}{q'} \to E^r_{*, *}(F_* \OS{E}{q+q'})\] which converge to the map \[F_* \OS{E}{q+1} \otimes_{F_*} F_* \OS{E}{q'} \xrightarrow{\circ} F_* \OS{E}{q+q'+1}\] on the \(E^\infty\)--page and which satisfy
 \[
 \pushQED{\qed}
 d^r(x \circ y) = (d^r x) \circ y. \qedhere
 \popQED
 \]
 \end{lemma}
-\noindent This Lemma is incredibly useful: it means that differentials can be transported \emph{between spectral sequences} for classes which can be decomposed as \(\circ\)--products.  This means that the bottom spectral sequence (i.e., the case \(j = 0\)) exerts a large amount of control over the others---and this spectral sequence often turns out to be very computable.
+\noindent This Lemma is incredibly useful: it means that differentials can be transported \emph{between spectral sequences} for classes which can be decomposed as \(\circ\)--products.  This means that the bottom spectral sequence (i.e., the case \(q = 0\)) exerts a large amount of control over the others---and this spectral sequence often turns out to be very computable.
 
 We now turn to concrete computations for \(E = \HFtwo\) and \(F = \HFtwo\).  To ground the induction, we will consider the first spectral sequence \[\Tor^{\HFtwo_*(\F_2)}_{*, *}(\F_2, \F_2) \Rightarrow \HFtwo_* B\F_2.\]  Using \(\RP^\infty\) as a model for \(B\F_2\), we employ \Cref{HF2RPinftyExample} to analyze the target of this spectral sequence: as an \(\F_2\)--module, we have an isomorphism \[\HFtwo_* B\F_2 \cong \F_2\{\alpha_j \mid j \ge 0\}.\]  Using our further computation in \Cref{RPExampleFaulty}, we can also give a presentation of the Hopf algebra structure on \(\HFtwo_* B\F_2\): it is dual to the primitively-generated polynomial algebra on a single class, so forms a divided power algebra on a single class which we will denote by \(\alpha_{()}\).  In characteristic \(2\), this decomposes as \[\HFtwo_* B\F_2 \cong \Gamma[\alpha_{()}] \cong \bigotimes_{j=0}^\infty \F_2[\alpha_{(j)}] / \alpha_{(j)}^2,\] where we have written \(\alpha_{(j)}\) for \(\alpha_{()}^{[2^j]}\) in the divided power structure and for \(\alpha_{2^j}\) in the presentation of \(\HFtwo_* B\F_2\).
 
@@ -146,21 +146,21 @@ As an algebra, the homology \(\HFtwo_*(\F_2)\) of the discrete space \(\F_2\) is
 
 We now summarize the rest of the induction:
 \begin{theorem}\label{UnstableSteenrodInduction}
-\(\HFtwo_* \OS{\HFtwo}{t}\) is the exterior \(\ast\)--algebra on the \(t\)--fold \(\circ\)--products of the generators \(\alpha_{(j)} \in \HFtwo_* B\F_2\): \[\HFtwo_* \OS{\HFtwo}{t} \cong \frac{\F_2[\alpha_{(j_1)} \circ \cdots \circ \alpha_{(j_t)} \mid j_1 \le \cdots \le j_t]}{(\alpha_{(j_1)} \circ \cdots \circ \alpha_{(j_t)})^{\ast 2}}.\]
+\(\HFtwo_* \OS{\HFtwo}{t}\) is the exterior \(\ast\)--algebra on the \(q\)--fold \(\circ\)--products of the generators \(\alpha_{(j)} \in \HFtwo_* B\F_2\): \[\HFtwo_* \OS{\HFtwo}{t} \cong \frac{\F_2[\alpha_{(j_1)} \circ \cdots \circ \alpha_{(j_q)} \mid j_1 \le \cdots \le j_q]}{(\alpha_{(j_1)} \circ \cdots \circ \alpha_{(j_q)})^{\ast 2}}.\]
 \end{theorem}
 \begin{proof}
-Noting that the case \(t = 0\) is what was proved above, make the inductive assumption that this is true for some fixed value of \(t \ge 0\).  The \(\Tor\) groups of the associated bar spectral sequence \[\Tor^{\HFtwo_* \OS{\HFtwo}{t}}_{*, *}(\F_2, \F_2) \Rightarrow \HFtwo_* \OS{\HFtwo}{t+1}\] form a divided power algebra generated by the same \(t\)--fold \(\circ\)--products.  An analogue of a Ravenel--Wilson lemma~(\cite[Lemma 9.5]{RavenelWilsonKthyOfEMSpaces}, \cite[Claim 8.16]{Wilson}) gives a congruence \[(\alpha_{(j_2-j_1)} \circ \cdots \circ \alpha_{(j_{t+1}-j_1)})^{[2^{j_1}]} \equiv \alpha_{(j_1)} \circ \cdots \circ \alpha_{(j_t)} \circ \alpha_{(j_{t+1})} \tag{mod \(\ast\)--decomposables}.\]  It follows from \Cref{CircProductAndDifferentials} that the differentials vanish:
+Noting that the case \(q = 0\) is what was proved above, make the inductive assumption that this is true for some fixed value of \(q \ge 0\).  The \(\Tor\) groups of the associated bar spectral sequence \[\Tor^{\HFtwo_* \OS{\HFtwo}{q}}_{*, *}(\F_2, \F_2) \Rightarrow \HFtwo_* \OS{\HFtwo}{q+1}\] form a divided power algebra generated by the same \(q\)--fold \(\circ\)--products.  An analogue of a Ravenel--Wilson lemma~(\cite[Lemma 9.5]{RavenelWilsonKthyOfEMSpaces}, \cite[Claim 8.16]{Wilson}) gives a congruence \[(\alpha_{(j_2-j_1)} \circ \cdots \circ \alpha_{(j_{q+1}-j_1)})^{[2^{j_1}]} \equiv \alpha_{(j_1)} \circ \cdots \circ \alpha_{(j_q)} \circ \alpha_{(j_{q+1})} \tag{mod \(\ast\)--decomposables}.\]  It follows from \Cref{CircProductAndDifferentials} that the differentials vanish:
 \begin{align*}
-d((\alpha_{(j_2-j_1)} \circ \cdots \circ \alpha_{(j_{t+1}-j_1)})^{[2^{j_1}]}) & \equiv d(\alpha_{(j_1)} \circ \cdots \circ \alpha_{(j_t)} \circ \alpha_{(j_{t+1})}) \tag{mod \(\ast\)--decomposables} \\
-& = \alpha_{(j_1)} \circ d(\alpha_{(j_2)} \circ \cdots \circ \alpha_{(j_{t+1})}) \tag{\Cref{CircProductAndDifferentials}} \\
+d((\alpha_{(j_2-j_1)} \circ \cdots \circ \alpha_{(j_{q+1}-j_1)})^{[2^{j_1}]}) & \equiv d(\alpha_{(j_1)} \circ \cdots \circ \alpha_{(j_t)} \circ \alpha_{(j_{q+1})}) \tag{mod \(\ast\)--decomposables} \\
+& = \alpha_{(j_1)} \circ d(\alpha_{(j_2)} \circ \cdots \circ \alpha_{(j_{q+1})}) \tag{\Cref{CircProductAndDifferentials}} \\
 & = 0. \tag{inductive hyp.}
 \end{align*}
-Hence, the spectral sequence collapses.  To see that there are no multiplicative extensions, note that the only potentially undetermined multiplications occur as \(\ast\)--squares of exterior classes.  However, the \(\ast\)--squaring map is induced by the topological map\footnote{This is true only for the case of \(E = \HFp\).  In \Cref{COableCoopnsII} and \Cref{CoopnsForMoravaKandHA}, we will require a most robust proof that there are no extensions, which can be found in \cite[Proof of 8.11]{Wilson}.} \[\OS{\HFtwo}{t} \xrightarrow{\cdot 2} \OS{\HFtwo}{t},\] which is already null on the level of spaces.  It follows that there are no extensions and the induction holds.
+Hence, the spectral sequence collapses.  To see that there are no multiplicative extensions, note that the only potentially undetermined multiplications occur as \(\ast\)--squares of exterior classes.  However, the \(\ast\)--squaring map is induced by the topological map\footnote{This is true only for the case of \(E = \HFp\).  In \Cref{COableCoopnsII} and \Cref{CoopnsForMoravaKandHA}, we will require a most robust proof that there are no extensions, which can be found in \cite[Proof of 8.11]{Wilson}.} \[\OS{\HFtwo}{q} \xrightarrow{\cdot 2} \OS{\HFtwo}{q},\] which is already null on the level of spaces.  It follows that there are no extensions and the induction holds.
 \end{proof}
 
 \begin{corollary}\label{CalculationOfUnstableSteenrodHopfRing}
 There is an isomorphism
-\[\HFtwo_* \OS{\HFtwo}{*} \cong \bigotimes_t \frac{\F_2[\alpha_{(j_1)} \circ \cdots \circ \alpha_{(j_t)} \mid j_1 \le \cdots \le j_t]}{(\alpha_{(j_1)} \circ \cdots \circ \alpha_{(j_t)})^{\ast 2}} \cong \bigotimes_t (\HFtwo_* \RP^\infty)^{\sm t},\] where \((\HFtwo_* \RP^\infty)^{\sm t}\) denotes the \(t\){\th} exterior power of \(\HFtwo_* \RP^\infty\) as a Hopf algebra~\cite[Propposition 5.5]{GoerssDieudonne}. \qed
+\[\HFtwo_* \OS{\HFtwo}{*} \cong \bigotimes_q \frac{\F_2[\alpha_{(j_1)} \circ \cdots \circ \alpha_{(j_q)} \mid j_1 \le \cdots \le j_q]}{(\alpha_{(j_1)} \circ \cdots \circ \alpha_{(j_q)})^{\ast 2}} \cong \bigotimes_q (\HFtwo_* \RP^\infty)^{\sm q},\] where \((\HFtwo_* \RP^\infty)^{\sm q}\) denotes the \(q\){\th} exterior power of \(\HFtwo_* \RP^\infty\) as a Hopf algebra~\cite[Propposition 5.5]{GoerssDieudonne}. \qed
 \end{corollary}
 
 \begin{remark}[{\cite[Theorems 8.5 and 8.11]{Wilson}}]
@@ -183,12 +183,12 @@ We now apply this philosophy to our example:
 \[\mathcal A_* = \F_2[\xi_0, \xi_1, \xi_2, \ldots]/(\xi_0 = 1).\]
 \end{corollary}
 \begin{proof}
-We approach via the system \[\HFtwo_* \HFtwo \cong \colim\left( \cdots \to \widetilde{\HFtwo}_{*+j} \OS{\HFtwo}{j} \to \widetilde{\HFtwo}_{*+(j+1)} \OS{\HFtwo}{j+1} \to \cdots \right).\]  First, note that each map in the system factors through the \(\ast\)--indecomposables: the composite \[\Susp(\OS{E}{j} \times \OS{E}{j}) \to \Susp \OS{E}{j} \to \OS{E}{j+1}\] vanishes on \(E\)--homology for the same reason that suspension kills the cup product~\cite[Corollary 2.18]{BJW}, \cite[Proposition 13.65]{Switzer}.  We may therefore replace this system with \[\HFtwo_* \HFtwo \cong \colim\left( \cdots \to Q^* \HFtwo_{*+j} \OS{\HFtwo}{j} \to Q^* \HFtwo_{*+(j+1)} \OS{\HFtwo}{j+1} \to \cdots \right).\]  \Cref{CalculationOfUnstableSteenrodHopfRing} gives us unfettered access to the \(\ast\)--indecomposables:
+We approach via the system \[\HFtwo_* \HFtwo \cong \colim\left( \cdots \to \widetilde{\HFtwo}_{*+j} \OS{\HFtwo}{q} \to \widetilde{\HFtwo}_{*+(q+1)} \OS{\HFtwo}{q+1} \to \cdots \right).\]  First, note that each map in the system factors through the \(\ast\)--indecomposables: the composite \[\Susp(\OS{E}{q} \times \OS{E}{q}) \to \Susp \OS{E}{q} \to \OS{E}{q+1}\] vanishes on \(E\)--homology for the same reason that suspension kills the cup product~\cite[Corollary 2.18]{BJW}, \cite[Proposition 13.65]{Switzer}.  We may therefore replace this system with \[\HFtwo_* \HFtwo \cong \colim\left( \cdots \to Q^* \HFtwo_{*+q} \OS{\HFtwo}{q} \to Q^* \HFtwo_{*+(q+1)} \OS{\HFtwo}{q+1} \to \cdots \right).\]  \Cref{CalculationOfUnstableSteenrodHopfRing} gives us unfettered access to the \(\ast\)--indecomposables:
 \begin{align*}
 Q^\ast \HFtwo_* \OS{\HFtwo}{*} & \cong \F_2\left\{\alpha_{I} \middle| \text{\(I\) a multi-index}\right\} \\
-& = \F_2\left\{ \alpha_{(I_0)} \circ \alpha_{(I_1)} \circ \cdots \circ \alpha_{(I_n)} \middle| \text{\(I = (I_0, \ldots, I_n)\) a multi-index}\right\}.
+& = \F_2\left\{ \alpha_{(I_0)} \circ \alpha_{(I_1)} \circ \cdots \circ \alpha_{(I_q)} \middle| \text{\(I = (I_0, \ldots, I_q)\) a multi-index}\right\}.
 \end{align*}
-The \(j\){\th} component of this system consists of sums of monomials with \(j\) factors, and the maps in the system multiply by the homology suspension element \(\alpha_{(0)} = \xi_0\) to produce a monomial with \((j+1)\) factors from one with \(j\) factors.\footnote{As a reminder, the graded unstable element \(e \in H_1 S^1\) contributes to stable degree \(1 - 1 = 0\).}  Writing \(\xi_k = \alpha_{(k)}\), this computes the colimit to be \[\HFtwo_* \HFtwo \cong \F_2[\xi_k \mid k \ge 1]. \qedhere\]
+The \(q\){\th} component of this system consists of sums of monomials with \(q\) factors, and the maps in the system multiply by the homology suspension element \(\alpha_{(0)} = \xi_0\) to produce a monomial with \((q+1)\) factors from one with \(j\) factors.\footnote{As a reminder, the graded unstable element \(e \in H_1 S^1\) contributes to stable degree \(1 - 1 = 0\).}  Writing \(\xi_j = \alpha_{(j)}\), this computes the colimit to be \[\HFtwo_* \HFtwo \cong \F_2[\xi_j \mid j \ge 1]. \qedhere\]
 \end{proof}
 
 Our last goal in this Lecture is to sketch a foothold that this example has furnished us with for the algebro-geometric interpretation of unstable cooperations.  First, we should remark that it has been shown that there is no manifestation of the homology of a space as any kind of classical comodule~\cite[Theorem 9.4]{BJW}, so we are unable to directly pursue an analogue of \Cref{FHGivesComodules} presenting the homology of a space as a Cartesian quasicoherent sheaf over some object.  This no-go result is quite believable from the perspective of cohomology operations: we have calculated in the case of \(E = \HFtwo\) that a generic unstable cohomology operation takes the form \[x \mapsto \sum_{\text{\(S\) a set of multi-indices}} \left(c_S \cdot \prod_{I \in S} \Sq^I(x)\right).\]  This inherently uses the multiplicative structure on \(\HFtwo^*(X)\), and the proof of the result of Boardman, Johnson, and Wilson rests entirely on the observation that decomposable elements cannot be mapped to indecomposable elements by maps of algebras, but maps of modules have no such control.\footnote{It is probably still possible to treat this carefully enough to cast the whole of unstable operations (and, in particular, the comonad \(G\)) into algebro-geometric language.}
@@ -273,7 +273,7 @@ There is a similar (but algebraically murkier) story for the unstable descent ob
 \mathcal{UD}_{E \vee F}(X)[1] & = (E \vee F)(E(X) \times F(X)) \\
 & = E(E(X) \times F(X)) \times F(E(X) \times F(X)).
 \end{align*}
-Restricting attention to just the first factor, \(E(E(X) \times F(X))\), its homotopy receives a map \[\pi_0 E(E(X)) \otimes_{E_0} \pi_0 E(F(X)) \to \pi_0(E(E(X) \times F(X)),\] and if \(E\) has K\"unneth isomorphisms then the induced map off of the tensor product is an equivalence.  Again, we can identify the \(E(E(X))\) part of this expression as belonging to \(\mathcal{UD}_E(X)[1]\), and there is a cross-term \(E(F(X))\) accounting for the shared information with \(F\).  The other term also contains information present in \(\mathcal{UD}_F(X)[1]\) and a cross-term \(F(E(X))\) accounting for shared information with \(E\).  In order to understand how these cross-terms affect the reconstruction process, we are thus drawn to the following objects: \[\sheaf O(\Ucontext{E \vee F}(S^n)[1]) \leftarrow \pi_0 F(E(S^n)) = F_0 \OS{E}{n}.\]  As \(n\) ranges these again form a Hopf ring:
+Restricting attention to just the first factor, \(E(E(X) \times F(X))\), its homotopy receives a map \[\pi_0 E(E(X)) \otimes_{E_0} \pi_0 E(F(X)) \to \pi_0(E(E(X) \times F(X)),\] and if \(E\) has K\"unneth isomorphisms then the induced map off of the tensor product is an equivalence.  Again, we can identify the \(E(E(X))\) part of this expression as belonging to \(\mathcal{UD}_E(X)[1]\), and there is a cross-term \(E(F(X))\) accounting for the shared information with \(F\).  The other term also contains information present in \(\mathcal{UD}_F(X)[1]\) and a cross-term \(F(E(X))\) accounting for shared information with \(E\).  In order to understand how these cross-terms affect the reconstruction process, we are thus drawn to the following objects: \[\sheaf O(\Ucontext{E \vee F}(S^q)[1]) \leftarrow \pi_0 F(E(S^q)) = F_0 \OS{E}{q}.\]  As \(q\) ranges these again form a Hopf ring:
 
 \begin{definition}
 We will refer to \(F_0(\OS{E}{0})\) as the \index{Hopf ring!mixed unstable cooperations}\textit{Hopf ring of mixed unstable cooperations} (from \(F\) to \(E\)) or the \index{Hopf ring!topological}\textit{topological Hopf ring} (from \(F\) to \(E\)).
@@ -607,15 +607,15 @@ The analysis of the first bar spectral sequence in the proof of \Cref{HFpBPCoope
 \end{remark}
 
 \begin{remark}[{\cite{Chan}, \cite[Section 10]{Wilson}}]
-There is an alternative proof that \(H_* \OS{BP}{2j}\) forms a bipolynomial Hopf algebra for each choice of \(j\) that makes no reference to Hopf rings.  It proceeds along very similar lines, as it also studies the iterated bar spectral sequence, but it proceeds entirely by counting: the elements in the spectral sequence are never given explicit names, and hence it gives no real hope of understanding the functor \(\SpH H_* \OS{BP}{2*}\).  By contrast, the Ravenel--Wilson method can be used to give an explicit enumeration of these classes~\cite[Section 5]{RavenelWilsonHopfRingForMU}.  Our presentation here is something of a compromise.
+There is an alternative proof that \(H_* \OS{BP}{2q}\) forms a bipolynomial Hopf algebra for each choice of \(q\) that makes no reference to Hopf rings.  It proceeds along very similar lines, as it also studies the iterated bar spectral sequence, but it proceeds entirely by counting: the elements in the spectral sequence are never given explicit names, and hence it gives no real hope of understanding the functor \(\SpH H_* \OS{BP}{2*}\).  By contrast, the Ravenel--Wilson method can be used to give an explicit enumeration of these classes~\cite[Section 5]{RavenelWilsonHopfRingForMU}.  Our presentation here is something of a compromise.
 \end{remark}
 
 \begin{remark}\label{WilsonSpaces}
-\index{Wilson space}The identification of the \(p\)--local and mod--\(p\) homology and cohomology of \(\OS{BP}{2k}\) as a bipolynomial Hopf algebra was first accomplished by Wilson in his PhD thesis~\cite[Theorem 3.3]{WilsonThesisI}.  He deduces quite a lot of interesting results from this observation.  For instance, each bipolynomial Hopf algebra can be shown to split as a tensor product of indecomposable such~\cite[Proposition 3.5]{WilsonThesisI}, and this splitting is reflected by a splitting of \(\OS{BP}{2k}\) into a product of indecomposable \(H\)--spaces.
+\index{Wilson space}The identification of the \(p\)--local and mod--\(p\) homology and cohomology of \(\OS{BP}{2q}\) as a bipolynomial Hopf algebra was first accomplished by Wilson in his PhD thesis~\cite[Theorem 3.3]{WilsonThesisI}.  He deduces quite a lot of interesting results from this observation.  For instance, each bipolynomial Hopf algebra can be shown to split as a tensor product of indecomposable such~\cite[Proposition 3.5]{WilsonThesisI}, and this splitting is reflected by a splitting of \(\OS{BP}{2q}\) into a product of indecomposable \(H\)--spaces.
 
-Remarkably, these indecomposable spaces can themselves be identified.  For each \(n\) there is a ring spectrum \(BP\<n\>\) over \(BP\) with homotopy presented by the subalgebra \(\pi_* BP\<n\> = \Z_{(p)}[v_1, \ldots, v_n]\).  This spectrum is \emph{not} uniquely specified, a reflection of the algebraic failure of the ideal \((v_{n+1}, v_{n+2}, \ldots)\) to be invariant, and so this resists formal-geometric interpretation (cf., however, \cite{AngeltveitLind}, \cite{LawsonNaumann}, \cite{StricklandProductsOnModules}, \ldots).  Nonetheless, using Steenrod module techniques Wilson shows~\cite[Section 6]{WilsonThesisII} that every simply-connected \(p\)--local \(H\)--space with torsion-free homology and (\(p\)--local ordinary) homology splits into a product of spaces \(Y_k\), and that \(Y_k = \OS{BP\<n\>}{k}\) for \(|v_n| < k(p-1) \le |v_{n+1}|\).
+Remarkably, these indecomposable spaces can themselves be identified.  For each \(n\) there is a ring spectrum \(BP\<n\>\) over \(BP\) with homotopy presented by the subalgebra \(\pi_* BP\<n\> = \Z_{(p)}[v_1, \ldots, v_n]\).  This spectrum is \emph{not} uniquely specified, a reflection of the algebraic failure of the ideal \((v_{n+1}, v_{n+2}, \ldots)\) to be invariant, and so this resists formal-geometric interpretation (cf., however, \cite{AngeltveitLind}, \cite{LawsonNaumann}, \cite{StricklandProductsOnModules}, \ldots).  Nonetheless, using Steenrod module techniques Wilson shows~\cite[Section 6]{WilsonThesisII} that every simply-connected \(p\)--local \(H\)--space with torsion-free homology and (\(p\)--local ordinary) homology splits into a product of spaces \(Y_q\), and that \(Y_q = \OS{BP\<n\>}{q}\) for \(|v_n| < q(p-1) \le |v_{n+1}|\).
 
-In particular, the spaces \(\OS{BP\<n\>}{k}\) in these bands \emph{are} independent of choice of parent spectrum \(BP\<n\>\), and all \(p\)--local \(H\)--spaces satisfying these freeness properties are automatically infinite loopspaces---extremely surprising results.
+In particular, the spaces \(\OS{BP\<n\>}{q}\) in these bands \emph{are} independent of choice of parent spectrum \(BP\<n\>\), and all \(p\)--local \(H\)--spaces satisfying these freeness properties are automatically infinite loopspaces---extremely surprising results.
 \end{remark}
 
 
@@ -906,7 +906,7 @@ It is also possible to build versions of Dieudonn\'e theory over still more exot
 \section{Ordinary cooperations for Landweber flat theories}\label{LEFTCooperations}
 
 \begin{center}
-\textbf{Convention: We will write \(H\) for \(\HFp\) for the duration of the lecture.}
+\textbf{Convention: We will write \(H\) for \(\HFp\) for the duration of the Lecture.}
 \end{center}
 
 Our goal in this Lecture is to put Dieudonn\'e modules to work for us in algebraic topology.  The executive summary of Dieudonn\'e theory is that it gives a \emph{linear} (or \emph{logarithmic}) presentation of the theory of Hopf algebras.  From the perspective of algebraic topology, functors sending cofiber sequences to exact sequences in a linear category are precisely homology functors.  Tying these two ideas together, if we can find a functor that sends exact sequences of spaces (or spectra) to exact sequences of Hopf algebras, we can post-compose it with a suitable version of the Dieudonn\'e functor to get a homology functor and hence a \emph{spectrum}.
@@ -1025,7 +1025,7 @@ Inspired by \Cref{UnstableRWRelation} and our interest in \(H_* \OS{E}{*}\), for
 Restricting attention to the even parts, the maps \[R_E \to D_E \to D_* H_* \OS{E}{2*}\] are isomorphisms for \(E\) Landweber flat.
 \end{theorem}
 \begin{proof}
-In \Cref{HopfRingForEBP}, we showed that these maps are isomorphisms for \(E = BP\).  However, the right--hand object can be identified via Brown--Gitler juggling: \[D_n H_* \OS{E}{2j} = B(n)_n \Susp^{2j} E = E_{2j+n} B(n).\]  It follows that if \(E\) is Landweber flat, then the middle-- and right--terms are determined by change-of-base from the respective \(BP\) terms.  Finally, the formation of \(R_E\) commutes with change-of-base, and the theorem follows.
+In \Cref{HopfRingForEBP}, we showed that these maps are isomorphisms for \(E = BP\).  However, the right--hand object can be identified via Brown--Gitler juggling: \[D_n H_* \OS{E}{2q} = B(n)_n \Susp^{2q} E = E_{2q+n} B(n).\]  It follows that if \(E\) is Landweber flat, then the middle-- and right--terms are determined by change-of-base from the respective \(BP\) terms.  Finally, the formation of \(R_E\) commutes with change-of-base, and the theorem follows.
 \end{proof}
 
 \begin{remark}
@@ -1033,7 +1033,7 @@ Goerss's original proof of \Cref{LandweberFlatUnstableCoopns}~\cite{GoerssDieudo
 \end{remark}
 
 \begin{remark}[{\cite[Proposition 11.6, Remark 11.4]{GoerssDieudonne}}]
-The Dieudonn\'e algebra framework also makes it easy to add in the odd part after the fact.  Namely, suppose that \(E\) is a torsion--free ring spectrum and suppose that \(E_* B(2n)\) is even for all \(n\).  In this setting, we can verify the purely topological version of this statement: \index{homology suspension}the map \[D_E[e] / (e^2 - b_1) \to D_* H_* \OS{E}{*}\] is an isomorphism.  To see this, note that because \[E_{2n-2k-1} B(2n) \to D_{2n} H_* \OS{E}{2k+1}\] is onto and \(E_{2n-2k-1} B(2n)\) is assumed zero, the group \(D_{2n} H_* \OS{E}{2k+1}\) vanishes as well.  A bar spectral sequence argument shows that \(D_{2n+1} H_* \OS{E}{2k+2}\) is also empty~\cite[Lemma 11.5.1]{GoerssDieudonne}.  Hence, the map on even parts \[(D_E[e] / (e^2 - b_1))_{*, 2n} \to (D_* H_* \OS{E}{*})_{*, 2n}\] is an isomorphism, and we need only show that \[D_* H_* \OS{E}{2n} \xrightarrow{e \circ -} D_* H_* \OS{E}{2n+1}\] is an isomorphism as well.  Since we have \(e(Fx) = F(Ve \circ x) = 0\) generally and \(D_* A / FD_* A \cong Q^* A\) for a Hopf algebra \(A\), we see that \(e\) kills decomposables and suspends indecomposables: \[e \circ D_* H_* \OS{E}{2n} = \Susp QH_* \OS{E}{2n}.\]  This is also what happens in the bar spectral sequence, and the claim follows.  In light of \Cref{LandweberFlatUnstableCoopns}, this means that for Landweber flat \(E\), the comparison isomorphism can be augmented to a further isomorphism \[R_E[e] / (e^2 - b_1) \to D_* H_* \OS{E}{*}.\]
+The Dieudonn\'e algebra framework also makes it easy to add in the odd part after the fact.  Namely, suppose that \(E\) is a torsion--free ring spectrum and suppose that \(E_* B(2n)\) is even for all \(n\).  In this setting, we can verify the purely topological version of this statement: \index{homology suspension}the map \[D_E[e] / (e^2 - b_1) \to D_* H_* \OS{E}{*}\] is an isomorphism.  To see this, note that because \[E_{2n-2q-1} B(2n) \to D_{2n} H_* \OS{E}{2q+1}\] is onto and \(E_{2n-2q-1} B(2n)\) is assumed zero, the group \(D_{2n} H_* \OS{E}{2q+1}\) vanishes as well.  A bar spectral sequence argument shows that \(D_{2n+1} H_* \OS{E}{2q+2}\) is also empty~\cite[Lemma 11.5.1]{GoerssDieudonne}.  Hence, the map on even parts \[(D_E[e] / (e^2 - b_1))_{*, 2q} \to (D_* H_* \OS{E}{*})_{*, 2q}\] is an isomorphism, and we need only show that \[D_* H_* \OS{E}{2q} \xrightarrow{e \circ -} D_* H_* \OS{E}{2q+1}\] is an isomorphism as well.  Since we have \(e(Fx) = F(Ve \circ x) = 0\) generally and \(D_* A / FD_* A \cong Q^* A\) for a Hopf algebra \(A\), we see that \(e\) kills decomposables and suspends indecomposables: \[e \circ D_* H_* \OS{E}{2q} = \Susp QH_* \OS{E}{2q}.\]  This is also what happens in the bar spectral sequence, and the claim follows.  In light of \Cref{LandweberFlatUnstableCoopns}, this means that for Landweber flat \(E\), the comparison isomorphism can be augmented to a further isomorphism \[R_E[e] / (e^2 - b_1) \to D_* H_* \OS{E}{*}.\]
 \end{remark}
 
 \begin{remark}[{\cite{HopkinsHunton}}]
